# polytopewalk

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml  test.cpp
.github/workflows/: ciwheels.yml
.github/workflows/scripts/: windows-setup.sh
include/: BallWalk.hpp  BarrierWalk.hpp  CentralPointFinder.hpp  DikinLSWalk.hpp  DikinWalk.hpp  FacialReduction.hpp  HitRunWalk.hpp  Initializer.hpp  JohnWalk.hpp  PolytopeWalk.hpp  RandomWalk.hpp  Reducer.hpp  VaidyaWalk.hpp  ball_walk.hpp  barrier_walk.hpp  common.hpp  dikin_walk.hpp  dikinls_walk.hpp  hitrun.hpp  hitrun_walk.hpp  john_walk.hpp  random_walk.hpp  vaidya_walk.hpp
pybind11/: ConstraintPybindExt.cpp  PybindExt.cpp  SparsePybindExt.cpp
src/: BallWalk.cpp  BarrierWalk.cpp  CMakeLists.txt  CentralPointFinder.cpp  DikinLSWalk.cpp  DikinWalk.cpp  FacialReduction.cpp  HitRunWalk.cpp  Initializer.cpp  JohnWalk.cpp  PybindExt.cpp  RandomWalk.cpp  Reducer.cpp  VaidyaWalk.cpp  ball_walk.cpp  barrier_walk.cpp  dikin_walk.cpp  dikinls_walk.cpp  hitrun.cpp  hitrun_walk.cpp  john_walk.cpp  random_walk.cpp  vaidya_walk.cpp
src/constraintwalk/: ConstraintBallWalk.cpp  ConstraintBallWalk.hpp  ConstraintBarrierWalk.cpp  ConstraintBarrierWalk.hpp  ConstraintDikinLSWalk.cpp  ConstraintDikinLSWalk.hpp  ConstraintDikinWalk.cpp  ConstraintDikinWalk.hpp  ConstraintHitRun.cpp  ConstraintHitRun.hpp  ConstraintJohnWalk.cpp  ConstraintJohnWalk.hpp  ConstraintVaidyaWalk.cpp  ConstraintVaidyaWalk.hpp  ConstraintWalk.cpp  ConstraintWalk.hpp  LeverageScore.cpp  LeverageScore.hpp  SparseCenter.cpp  SparseCenter.hpp  SparseFacialReduction.cpp  SparseFacialReduction.hpp  SparseLP.hpp
src/dense/: BallWalk.cpp  BallWalk.hpp  BarrierWalk.cpp  BarrierWalk.hpp  DikinLSWalk.cpp  DikinLSWalk.hpp  DikinWalk.cpp  DikinWalk.hpp  HitRun.cpp  HitRun.hpp  JohnWalk.cpp  JohnWalk.hpp  RandomWalk.cpp  RandomWalk.hpp  VaidyaWalk.cpp  VaidyaWalk.hpp
src/randomwalk/: BallWalk.hpp  BarrierWalk.cpp  BarrierWalk.hpp  CentralPointFinder.hpp  DikinLSWalk.cpp  DikinLSWalk.hpp  DikinWalk.cpp  DikinWalk.hpp  HitRunWalk.cpp  HitRunWalk.hpp  JohnWalk.cpp  JohnWalk.hpp  PolytopeWalk.hpp  RandomWalk.cpp  RandomWalk.hpp  VaidyaWalk.cpp  VaidyaWalk.hpp
src/sparse/: LeverageScore.cpp  SparseBallWalk.cpp  SparseBallWalk.hpp  SparseBarrierWalk.cpp  SparseBarrierWalk.hpp  SparseDikinLSWalk.cpp  SparseDikinLSWalk.hpp  SparseDikinWalk.hpp  SparseHitRun.cpp  SparseHitRun.hpp  SparseJohnWalk.cpp  SparseJohnWalk.hpp  SparseRandomWalk.cpp  SparseRandomWalk.hpp  SparseVaidyaWalk.hpp
src/sparserandomwalk/: BallWalk.cpp  BallWalk.hpp  BarrierWalk.cpp  BarrierWalk.hpp  Common.hpp  DikinLSWalk.cpp  DikinLSWalk.hpp  DikinWalk.cpp  DikinWalk.hpp  HitRunWalk.cpp  HitRunWalk.hpp  JohnWalk.cpp  JohnWalk.hpp  LeverageScore.cpp  PolytopeWalk.hpp  RandomWalk.cpp  RandomWalk.hpp  Reducer.cpp  Reducer.hpp  VaidyaWalk.cpp  VaidyaWalk.hpp
src/utils/: CentralPointFinder.hpp  Common.hpp  DenseCenter.cpp  DenseCenter.hpp  FacialReduction.cpp  FacialReduction.hpp  FacialReductionF2.cpp  FacialReductionF2.hpp  FullWalkRun.hpp  Initializer.cpp  Initializer.hpp  LeverageScore.hpp  Reducer.cpp  Reducer.hpp  SparseCenter.cpp  SparseCenter.hpp  SparseLP.hpp
tests/: CMakeLists.txt  cholesky.cpp  test.cpp  testcons.cpp  testfr.cpp  testlev.cpp  testsparse.cpp
