[build-system]
requires = [
		"scikit-build-core",
		"pybind11",
		"cmake>=3.18",
]
build-backend = "scikit_build_core.build"

[project]
name = "polytopewalk"
requires-python = ">=3.7"
version = "1.0.2"
description="Open Source Implementation of MCMC Polytope Walks"
authors = [
  { name = "Benny Sun", email = "benny.sun@duke.edu" },
  { name = "Yuansi Chen", email = "yuansi.chen@duke.edu" },
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]